--- a/app/src/main/resources/static/register/community-news.html
+++ b/app/src/main/resources/static/register/community-news.html
@@ -237,18 +237,19 @@
     
     <!-- End Contact Page Nav -->
     <li class="nav-item">
-      <a class="nav-link collapsed" href="pages-faq.html">
+      <a class="nav-link collapsed" href="QnQ-doc.html">
         <i class="bi bi-question-circle"></i>
         <span>Q & A</span>
       </a>
     </li><!-- End F.A.Q Page Nav -->
     
     <li class="nav-item">
-      <a class="nav-link collapsed" href="hospitals-list.html">
+      <a class="nav-link collapsed" href="hospitals-view.html">
         <i class="bi bi-card-list"></i>
         <span>내 병원 정보</span>
       </a>
-    </li><!-- End Register Page Nav -->
+    </li>
+    <!-- End Register Page Nav -->
 
     <!-- 로그아웃 태그 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
