--- a/app/src/main/resources/static/register/memberEditor.html
+++ b/app/src/main/resources/static/register/memberEditor.html
@@ -32,13 +32,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: NiceAdmin
-  * Updated: Mar 09 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
   <style>
     .carousel-item {
       transition: 1s;
@@ -225,6 +219,13 @@
       </li>
 
       <li class="nav-item">
+        <a class="nav-link collapsed" href="AnA-list.html">
+          <i class="bi bi-file-earmark"></i>
+          <span>QnA</span>
+        </a>
+      </li>
+
+      <li class="nav-item">
         <a class="nav-link collapsed" href="index.html" target='_blank'>
           <i class="bi bi-box-arrow-in-right"></i>
           <span>환자 사이트</span>
@@ -268,17 +269,6 @@
 
   </aside><!-- End Sidebar-->
   <main id="main" class="main">
-
-    <div class="pagetitle">
-      <h1>회원 조회</h1>
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item">Tables</li>
-          <li class="breadcrumb-item active">General</li>
-        </ol>
-      </nav>
-    </div><!-- End Page Title -->
 
     <section class="section">
       <div class="row">
@@ -447,23 +437,42 @@
       }
 
     </style>
-    <div class="new-windows">
+    <div class="new-windows border border-2">
+    
     </div>
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-    <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-      <!-- All the links in the footer should remain intact. -->
-      <!-- You can delete the links only if you purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
+   <div>
+ <div class="tooltip-container">
+    <a href="https://github.com/whtmdgus" data-bs-toggle="tooltip" data-bs-placement="top" title="조승현">
+      <img src="../register/assets/img/gitlogo.png" style="width:40px">
+    </a>
+    <a href="https://github.com/chaminju927" data-bs-toggle="tooltip" data-bs-placement="top" title="차민주">
+      <img src="../register/assets/img/gitlogo.png" style="width:40px">
+    </a>
+    <a href="https://github.com/molang2" data-bs-toggle="tooltip" data-bs-placement="top" title="이준영">
+      <img src="../register/assets/img/gitlogo.png" style="width:40px">
+    </a>
+    <a href="https://github.com/hyunwookimkim" data-bs-toggle="tooltip" data-bs-placement="top" title="김현우">
+      <img src="../register/assets/img/gitlogo.png" style="width:40px">
+    </a>
+    <a href="https://github.com/omelase" data-bs-toggle="tooltip" data-bs-placement="top" title="이예찬">
+      <img src="../register/assets/img/gitlogo.png" style="width:40px">
+    </a>
+ </div>
+ 
+ <div class="footer-img-container">
+   <img src ="../register/assets/img/bitcamplogo.png" > 
+   <img src ="../register/assets/img/navercloudlogo.png" style="width:200px; margin-left: 50px;"> 
+   <img src ="../register/assets/img/magicecole.png" style="width:150px; margin-left: 50px;">
+  </div>
+
+</div>
+   
+  
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
