--- a/app/src/main/resources/static/auth/patients-login.html
+++ b/app/src/main/resources/static/auth/patients-login.html
@@ -29,18 +29,8 @@
 
   <!-- Template Main CSS File -->
   <link href="../assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: NiceAdmin
-  * Updated: Mar 09 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
-
 <body>
-
   <main>
     <div class="container">
 
@@ -49,26 +39,19 @@
           <div class="row justify-content-center">
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
-              <div class="d-flex justify-content-center py-4">
-                <a href="../index.html" class="logo d-flex align-items-center w-auto">
-                  <img src="../assets/img/newlogo.png" alt="">
-                  <span class="d-none d-lg-block">MyClinic</span>
-                </a>
-              </div><!-- End Logo -->
-
               <div class="card mb-3">
-
                 <div class="card-body">
 
                   <div class="pt-4 pb-2">
-                    <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
-                    <p class="text-center small">로그인 후 다양한 진료 서비스를 받아보세요!</p>
+                   <img src ="../register/assets/img/mainlogo-tr.png" style="height:200px; margin-left:80px ">
+                    <h5 class="card-title text-center pb-0 fs-4"><strong>Login to Your Account</strong></h5>
+                    <p class="text-center small"><strong>로그인 후 다양한 진료 서비스를 받아보세요!</strong></p>
                   </div>
 
                   <form id="login-form" action="patientLogin" mehtod="post" class="row g-3 needs-validation" novalidate>
 
                     <div class="col-12">
-                      <label for="yourUsername" class="form-label">회원 ID</label>
+                      <label for="yourUsername" class="form-label"><strong>회원 ID</strong></label>
                       <div class="input-group has-validation">
                         <input type="text" name="id" class="form-control" id="ID" required>
                         <div class="invalid-feedback">아이디를 입력하세요!</div>
@@ -76,7 +59,7 @@
                     </div>
 
                     <div class="col-12">
-                      <label for="yourPassword" class="form-label">비밀번호</label>
+                      <label for="yourPassword" class="form-label"><strong>비밀번호</strong></label>
                       <input type="password" name="password" class="form-control" id="yourPassword" required>
                       <div class="invalid-feedback">비밀번호를 입력하세요</div>
                     </div>
@@ -87,22 +70,17 @@
                         <label class="form-check-label" for="rememberMe">아이디 저장하기</label>
                       </div>
                     </div>
-                    <div class="col-12">
-                      <button id="btn-login" class="btn btn-primary w-100" type="button">로그인</button>
-                    </div>
-                    <div class="col-12">
-                      <button class="btn btn-primary w-100" type="button">비회원</button>
+                    <div class="col-12" style="text-align:center;">
+                      <button id="btn-login" class="btn btn-primary" type="button">로그인</button>
+                      <button class="btn btn-primary" type="button">비회원</button>
                     </div>
                     <div id="naver_id_login">
 
                     </div>
-                    <div class="col-12">
-                      <p class="small mb-0">계정이 없으시다구요?<a href="../register/patients-signup.html">지금 계정 만들기</a></p>
+                    <div class="col-12" style="text-align:center;">
+                      <p class="small mb-0">계정이 없으시다구요?<a href="../register/patients-signup.html"><strong>지금 계정 만들기</strong></a></p>
                     </div>
                   </form>
-
-
-
 
                 </div>
               </div>
@@ -155,9 +133,9 @@
         }
       })
       .then((user) => {
-        if(user.phy !== undefined) {
+        if (user.phy !== undefined) {
           location.href = '../register/index.html';
-        }else if(user.admin) {
+        } else if (user.admin) {
           location.href = '../register/memberEditor.html';
         }
       })
@@ -246,7 +224,7 @@
 
   <!-- 네이버 아이디 로그인 초기화 Script-->
   <script type="text/javascript">
-    var naver_id_login = new naver_id_login("xrpuojJYw18imfX2Z6DQ", "http://175.106.99.31/auth/callback.html");
+    var naver_id_login = new naver_id_login("x9QsZfbe1nRbY_xq0a2s", "http://175.106.99.31/auth/callback.html");
     var state = naver_id_login.getUniqState();
     naver_id_login.setButton("green", 3, 75);
     naver_id_login.setDomain("http://175.106.99.31/auth/patients-login.html");
@@ -254,6 +232,31 @@
     // naver_id_login.setPopup();
     naver_id_login.init_naver_id_login();
     naver_id_login.get_naver_userprofile("naverSignInCallback");
+  </script>
+
+  <!-- <script type="text/javascript">
+    var naver_id_login = new naver_id_login("x9QsZfbe1nRbY_xq0a2s", "http://175.106.99.31/register/index.html");
+    // 접근 토큰 값 출력
+    alert(naver_id_login.oauthParams.access_token + "접근 토큰");
+
+    // 네이버 사용자 프로필 조회
+    function naverSignInCallback() {
+      alert(naver_id_login.getProfileData('name'));
+      alert(naver_id_login.getProfileData('email'));
+      alert(naver_id_login.getProfileData('mobile'));
+    } 
+  </script> -->
+
+  <!-- 네이버 아이디 로그인 초기화 Script
+  <script type="text/javascript">
+    var naver_id_login = new naver_id_login("xrpuojJYw18imfX2Z6DQ", "http://175.106.99.31/auth/callback.html");
+    var state = naver_id_login.getUniqState();
+    naver_id_login.setButton("green", 3, 75);
+    naver_id_login.setDomain("http://175.106.99.31/auth/patients-login.html");
+    naver_id_login.setState(state);
+    // naver_id_login.setPopup();
+    naver_id_login.init_naver_id_login();
+    naver_id_login.get_naver_userprofile("naverSignInCallback()");
   </script>
 
   <script type="text/javascript">
@@ -265,9 +268,9 @@
     function naverSignInCallback() {
       alert(naver_id_login.getProfileData('name'));
       alert(naver_id_login.getProfileData('email'));
-      alert(naver_id_login.getProfileData('mobile'));
+      alert(naver_id_login.getProfileData('nickname'));
     } 
-  </script>
+  </script> -->
 
 
 
