--- a/app/src/main/resources/static/register/community-view.html
+++ b/app/src/main/resources/static/register/community-view.html
@@ -28,14 +28,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: NiceAdmin
-  * Updated: Mar 09 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -149,20 +141,21 @@
           <span>진료하기</span>
         </a>
       </li> 
-     
+
       <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-faq.html">
+        <a class="nav-link collapsed" href="QnQ-doc.html">
           <i class="bi bi-question-circle"></i>
-          <span>Q & A</span>
+          <span>문의하기</span>
         </a>
-      </li><!-- End F.A.Q Page Nav -->
+      </li>
       
       <li class="nav-item">
-        <a class="nav-link collapsed" href="hospitals-list.html">
+        <a class="nav-link collapsed" href="hospitals-view.html">
           <i class="bi bi-card-list"></i>
           <span>내 병원 정보</span>
         </a>
-      </li><!-- End Register Page Nav -->
+      </li>
+      <!-- End Register Page Nav -->
 
       <!-- 로그아웃 태그 -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
@@ -309,14 +302,35 @@
 
   </main>
 
-  <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-    <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
+<div>
+ <div class="tooltip-container">
+    <a href="https://github.com/whtmdgus" data-bs-toggle="tooltip" data-bs-placement="top" title="조승현">
+      <img src="../register/assets/img/gitlogo.png" style="width:40px">
+    </a>
+    <a href="https://github.com/chaminju927" data-bs-toggle="tooltip" data-bs-placement="top" title="차민주">
+      <img src="../register/assets/img/gitlogo.png" style="width:40px">
+    </a>
+    <a href="https://github.com/molang2" data-bs-toggle="tooltip" data-bs-placement="top" title="이준영">
+      <img src="../register/assets/img/gitlogo.png" style="width:40px">
+    </a>
+    <a href="https://github.com/hyunwookimkim" data-bs-toggle="tooltip" data-bs-placement="top" title="김현우">
+      <img src="../register/assets/img/gitlogo.png" style="width:40px">
+    </a>
+    <a href="https://github.com/omelase" data-bs-toggle="tooltip" data-bs-placement="top" title="이예찬">
+      <img src="../register/assets/img/gitlogo.png" style="width:40px">
+    </a>
+ </div>
+ 
+ <div class="footer-img-container">
+   <img src ="../register/assets/img/bitcamplogo.png" > 
+   <img src ="../register/assets/img/navercloudlogo.png" style="width:200px; margin-left: 50px;"> 
+   <img src ="../register/assets/img/magicecole.png" style="width:150px; margin-left: 50px;">
+  </div>
+
+</div>
+   
+  
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
@@ -331,11 +345,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="community-view.js"></script>
-
-
-  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-
 
 </body>
 
