--- a/app/src/main/resources/static/register/doctors-advices.html
+++ b/app/src/main/resources/static/register/doctors-advices.html
@@ -297,19 +297,19 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link collapsed" href="pages-faq.html">
+          <a class="nav-link collapsed" href="QnQ-doc.html">
             <i class="bi bi-question-circle"></i>
-            <span>Q & A</span>
+            <span>문의하기</span>
           </a>
         </li>
-        <!-- End F.A.Q Page Nav -->
 
         <li class="nav-item">
-          <a class="nav-link collapsed" href="hospitals-list.html">
+          <a class="nav-link collapsed" href="hospitals-view.html">
             <i class="bi bi-card-list"></i>
             <span>내 병원 정보</span>
           </a>
         </li>
+        <!-- End Register Page Nav -->
         <!-- End Register Page Nav -->
 
         <!-- 로그아웃 태그 -->
@@ -322,18 +322,18 @@
         </li>
         <!-- End Login Page Nav -->
         <script>
-          $('.logout').click(() => {
+          $(".logout").click(() => {
             console.log(11);
             fetch(`http://175.106.99.31/auth/logout`, {
-              method: 'GET',
+              method: "GET",
             })
               .then((response) => response.json())
               .then((data) => {
-                if (data.status == 'success') {
-                  location.href = '';
+                if (data.status == "success") {
+                  location.href = "";
                 } else {
-                  alert('로그아웃 실패');
-                  location.href = '';
+                  alert("로그아웃 실패");
+                  location.href = "";
                 }
               });
           });
