--- a/app/src/main/resources/static/register/patients-profile.html
+++ b/app/src/main/resources/static/register/patients-profile.html
@@ -217,7 +217,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link collapsed" href="">
+          <a class="nav-link collapsed" href="QnQ.html">
             <i class="bi bi-question-circle"></i>
             <span>문의하기</span>
           </a>
@@ -307,7 +307,7 @@
                     </button>
                   </li>
 
-                  <li class="nav-item">
+                  <li class="nav-item pass-change">
                     <button
                       class="nav-link"
                       data-bs-toggle="tab"
@@ -567,6 +567,8 @@
                             type="password"
                             class="form-control patients-pw"
                             id="currentPassword"
+                            placeholder="8자 이상 숫자, 특수 문자 포함"
+                            pattern="^(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$"
                           />
                         </div>
                       </div>
@@ -583,6 +585,8 @@
                             type="password"
                             class="form-control change-pw"
                             id="newPassword"
+                            placeholder="8자 이상 숫자, 특수 문자 포함"
+                            pattern="^(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$"
                             onchange="checkPw()"
                           />
                         </div>
@@ -600,6 +604,8 @@
                             type="password"
                             class="form-control change-pw-check"
                             id="renewPassword"
+                            placeholder="8자 이상 숫자, 특수 문자 포함"
+                            pattern="^(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$"
                             onchange="checkPw()"
                           />
                         </div>
